# PhD-developments

./: .gitignore  .gitmodules  README.md  pyproject.toml
01_spurious_volumetric_strain/: ex_evp_MC.py  ex_evp_MC_no_div.py  ex_evp_SR3.py  ex_evp_SR3_no_div.py
02_SR3_hardening/: ex0.py
